--- a/projects/hover/index.html
+++ b/projects/hover/index.html
@@ -9,71 +9,108 @@
         font-family: monospace;
 			}
 			canvas { width: 100%; height: 100% }
-			button { background: transparent; border:none; outline:none; cursor: pointer; font-family: monospace; font-size: 4em; color: #fff;}
+			button { background: transparent; border:none; outline:none; cursor: pointer; font-family: monospace; font-size: 4em; color: #fff; opacity: 0.7;}
 			#hud {position: absolute; top:0px; left:0px; width: 110px; }
 			#go {left: 1em; display: none;}
 			#go.show {left: 1em; display: block;}
 
 			.slidecontainer {
-        /*width: 90%;*/
+        position: absolute;
+        bottom: -360px;
        transform: rotate(-90deg);
        width: 300px; 
        height: 300px;
-         display: block; margin: 20px auto; padding:10px;
-       }
-			#rotate {font-size: 1em; position: fixed; bottom:20px; right: 20px;}
+       z-index: 2;
+         display: block; margin: 20px; padding:10px;
+         margin: 0 8px;
+}
 
-.slider {
+#carrier {
   -webkit-appearance: none;
   width: 100%;
   height: 2px;
-  background: rgba(200,200,200,0.2);
+  background: rgba(100,100,100,0.2);
   outline: none;
   -webkit-transition: .2s;
   transition: opacity .2s;
 }
 
-.slidecontainer{
-  margin: 40px;
-}
 
-.slider::-webkit-slider-thumb {
+#carrier::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 50px;
-  height: 50px;
+  width: 24px;
+  height: 24px;
   border: 0;
-  background: red;
+  background: #666;
+  opacity: 0.5;
   background-size: 70px;
   cursor: pointer;
-  border-radius: 50%;
 }
 
-.slider::-moz-range-thumb {
-  width: 50px;
-  height: 50px;
+#carrier::-moz-range-thumb {
+  width: 24px;
+  height: 24px;
   border: 0;
-  background: red;
+  background: #666;
+  opacity: 0.5;
   background-size: 70px;
   cursor: pointer;
-  border-radius: 50%;
 }
 
-.note {position: absolute; right: 20px;}
-#vert {position: absolute; top: 12px; right: 12px;
-display: block; width: 40px; height: 40px; text-align: center; line-height: 40px; background: red; border-radius: 100%; font-size: 1em;}
-button.on {color: red; background: #fff !important;}
-.keys {position: absolute; bottom: 12px; left: 12px; opacity: 0.1;}
-.keys:hover {opacity: 1;}
+#carrier.on::-webkit-slider-thumb,
+#carrier.on::-moz-range-thumb {opacity: 1;}
+
+#carrier:hover,
+#carrier:hover,
+#carrier.on
+ {background: red !important; opacity: 1 !important; cursor: pointer;}
+
+button.on {color: #fff !important; background: red !important; opacity: 1;}
+button:hover {background: red !important; opacity: 1 !important;}
+button.on:hover {color: #fff !important;}
+
+#space, #dirup, #dirdwn {background: transparent; outline: none; font-family: monospace; color: #fff; border:none; cursor: pointer; font-size: 1em; width: 108px; height: 24px; text-align: center; line-height: 20px; color: #fff; position: absolute; z-index: 1;
+  top:60px; left:32px;}
+button {background: rgba(255,255,255,0.1) !important;}
+#dirup { top:32px; left: 204px; width: 24px; 
+transform: rotate(-90deg); transform-origin: center; }
+#dirdwn { left: 204px; width: 24px;
+transform: rotate(90deg); transform-origin: center;  }
+svg path {opacity: 0.15;}
+#svgkeys {position: absolute;}
+#keys {position: relative; bottom: 0; }
+#keyboard {position: absolute; bottom: 94px; left: 4px;}
+
+input {background: transparent; border:none; outline: none; color: #fff; font-family: monospace; font-size: 2em;}
+#chkb, #chkg {position: absolute; right: 12px; top: 22px;  text-align: right; width: 40px; height: 40px; text-align: center; background: rgba(50,50,50,0.5); font-size: 2em; color: #fff; line-height: 40px;} 
+#chkb.on, #chkg.on {background: #fff !important;}
+#chkb {color: #fff; top: 70px;}
+#chkg {color: red;}
 		</style>
 	</head>
 	<body>
 
-		<p class="keys">keys: go:up, stop:down, space:fly/drive</p>
+<div id="keyboard">
 
-		<button id="vert" title="flip vertical/horizontal mode">+</button>
-	
+<div id="keys">
+<button id="space" title="vertical/horizontal" onclick="verticalview()" >space</button>
+<button id="dirup" title="go" onclick="incnum()">&gt;</button>
+<button id="dirdwn" title="stop" onclick="decnum()" >&gt;</button>
+</div>
+
+<svg id="svgkeys" height="90" preserveAspectRatio="none" viewBox="0 0 260 90" width="260" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><g id="a"><path d="m24 24v-24h-24v24z" fill="#903"/></g></defs><use transform="translate(4 60)" xlink:href="#a"/><use transform="translate(4 32)" xlink:href="#a"/><use transform="translate(4 4)" xlink:href="#a"/><use transform="translate(32 32)" xlink:href="#a"/><use transform="translate(32 4)" xlink:href="#a"/><use transform="translate(60 32)" xlink:href="#a"/><use transform="translate(60 4)" xlink:href="#a"/><use transform="translate(88 32)" xlink:href="#a"/><use transform="translate(88 4)" xlink:href="#a"/><use transform="translate(116 4)" xlink:href="#a"/><use transform="translate(144 60)" xlink:href="#a"/><use transform="translate(176 60)" xlink:href="#a"/><use transform="translate(232 60)" xlink:href="#a"/><g fill="#903"><path d="m26-26h-24v28h-28v24h52z" transform="translate(142 30)"/><path d="m54 12v-24h-108v24z" transform="translate(86 72)"/><path d="m12 12v-24h-24v24z" transform="translate(216 44)"/><path d="m12-12h-24v24h24z" transform="translate(216 72)"/></g></svg>
+
+</div><!-- keyboard -->
+
+
+    <span id="chkb" />w</span>
+    <span id="chkg" />r</span>
+
+
 <div id="hud">
+
+
 <div class="slidecontainer">
   <input class="slider" id="carrier" type="range" value="0" min="0" max="0.0055" step="0.00001" oninput="handleCarrierChange(value)" />
 </div>
@@ -97,17 +134,14 @@ if (value>0) {stopwarp = false;
   }
 }
 
-var vertbtn = document.getElementById("vert");
-vertbtn.addEventListener("click",verticalview, false );
+var vertbtn = document.getElementById("space");
 // vertical mode
 function verticalview() {
   vertbtn.classList.toggle('on');
   if (vertbtn.classList != "on") {
 plane.rotation.set(-Math.PI/2,0,0);
 shadowground.visible = true;
-// ground.visible = true;
 shdw.visible = true;
-// cylinder.visible = false;
 horizontal = true;
 new TWEEN.Tween( mothership.position).to( {x: mothership.position.x, y: 0, z: mothership.position.z}, 200 ).easing( TWEEN.Easing.Quadratic.EaseOut).start();
 new TWEEN.Tween( gridHelper.rotation).to( {x: 0, y: 0, z: 0}, 200 ).easing( TWEEN.Easing.Quadratic.EaseOut).start();
@@ -115,25 +149,26 @@ new TWEEN.Tween( gridHelper.rotation).to( {x: 0, y: 0, z: 0}, 200 ).easing( TWEE
   } else {
 plane.rotation.set(0,Math.PI/2,0);
 shadowground.visible = false;
-// ground.visible = false;
 shdw.visible = false;
 horizontal = false;
-// cylinder.visible = true;
 cursor.position.x = 0;
 new TWEEN.Tween( gridHelper.rotation).to( {x: 0, y: 0, z: Math.PI/2}, 200 ).easing( TWEEN.Easing.Quadratic.EaseOut).start();
 
   setTimeout(function() {
 new TWEEN.Tween( hero.position).to( {x: 0, y: mothership.position.y, z: mothership.position.z}, 200 ).easing( TWEEN.Easing.Quadratic.EaseOut).start();
-// cursor.position.x = 0;
-// hero.position.x = 0;
+
     }, 100);
 
 
-}
+}// else
 
-}
+}// vert mode
 
+// variables
+var bpoints = 0;
+var gpoints = 0;
 
+var collidableMeshList = [];
 
 var stopwarp = true;
 var horizontal = true;
@@ -145,7 +180,6 @@ var scene = new THREE.Scene();
 var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.8, 1000 );
 var renderer = new THREE.WebGLRenderer( { alpha: true, antialias: true } );
 renderer.setSize( window.innerWidth, window.innerHeight );
-// renderer.localClippingEnabled = true;
 renderer.shadowMap.enabled = true;
 renderer.shadowMap.type = THREE.PCFShadowMap;
 document.body.appendChild( renderer.domElement );
@@ -168,7 +202,7 @@ controls.maxPolarAngle = Math.PI*0.46;
 controls.enableDamping = true;
 controls.dampingFactor = 0.4;
 controls.maxDistance = 50;
-controls.minDistance = 6;
+controls.minDistance = 1;
 controls.enablePan = false;
 
 // grid
@@ -206,21 +240,9 @@ var material = new THREE.MeshBasicMaterial( {color: 0xffffff
 } );
 var shadowground = new THREE.Mesh( geometry, material );
 shadowground.position.set (0,0.05,0);
-// shadowground.scale.set (1,1,1);
 shadowground.rotation.set (-Math.PI/2,0,0);
 scene.add( shadowground );
-// shadowground.visible = false;
 
-
-// cylinder
-// var geometry = new THREE.CylinderBufferGeometry( 50, 50, 200, 60, 1, true
-//  );
-// var material = new THREE.MeshBasicMaterial( {color: 0xff0000, transparent : true, opacity:0.2,
-// map:groundtex, side: THREE.BackSide } );
-// var cylinder = new THREE.Mesh( geometry, material );
-// cylinder.rotation.set (0,0,-Math.PI/2);
-// scene.add( cylinder );
-// cylinder.visible = false;
 
 
 // resize
@@ -244,12 +266,16 @@ scene.add(mothership);
 cube = new THREE.Group();
 mothership.add(cube);
 
+
 // hero
-let bgeometry = new THREE.BoxGeometry( 0.6, 0.1, 0.6 );
-let mmaterial = new THREE.MeshLambertMaterial( { color: 0xcc0000 } );
+// let bgeometry = new THREE.PlaneGeometry( 1.5,  0.6, 1 );
+let bgeometry = new THREE.BoxGeometry( 0.9, 0.6, 0.4 );
+let mmaterial = new THREE.MeshLambertMaterial( { color: 0xcc0000, wireframe: true
+ } );
 let cubicbody = new THREE.Mesh( bgeometry, mmaterial );
-cubicbody.position.set(0,0.3,0);
-// cube.add( cubicbody );
+cubicbody.position.set(0,0.5,0);
+mothership.add( cubicbody );
+cubicbody.visible = false;
 
 
 
@@ -259,13 +285,12 @@ var loader = new THREE.BufferGeometryLoader();
 loader.load(
   'hcar.json',
   function ( geometry ) {
-    var material = new THREE.MeshPhongMaterial( { 
+    var carmaterial = new THREE.MeshPhongMaterial( {
           color: 0xff0000
-          // , transparent:true, opacity:0.5
        } );
 
 
-    car = new THREE.Mesh( geometry, material );
+    car = new THREE.Mesh( geometry, carmaterial );
     car.name = "car"
     car.position.set(0,0.3, 0);
     car.rotation.set(0,Math.PI/2,0);
@@ -282,33 +307,42 @@ loader.load(
 
 // shadow 
 let egeometry = new THREE.PlaneGeometry( 1.5, 0.6, 1 );
-let ematerial = new THREE.MeshBasicMaterial( { color: 0x000000, transparent:true,
-opacity:0.2 } );
+let ematerial = new THREE.MeshBasicMaterial( { 
+  color: 0x000000,
+   // transparent:true, opacity:0.2
+    } );
 let shdw = new THREE.Mesh( egeometry, ematerial );
-shdw.position.set(0,0.2,0);
+shdw.position.set(0.05,0.2,0);
 shdw.rotation.set(-Math.PI/2,0,0)
 mothership.add(shdw);
 
 
-// trail
-var loader = new THREE.TextureLoader();
-loader.load( 'xgrad.png', function ( texture ) {
-  var trgeometry = new THREE.PlaneBufferGeometry( 0.1, 0.6, 1 );
-  trgeometry.applyMatrix( new THREE.Matrix4().makeTranslation(0.05, 0, 0) );
+// // trail
+// var loader = new THREE.TextureLoader();
+// loader.load( 'xgrad.png', function ( texture ) {
+//   var trgeometry = new THREE.PlaneBufferGeometry( 0.1, 0.6, 1 );
+//   trgeometry.applyMatrix( new THREE.Matrix4().makeTranslation(0.05, 0, 0) );
 
-  var trmaterial = new THREE.MeshBasicMaterial( {
-  color:0xff0000, map: texture, transparent: true, opacity: 0.7, side: THREE.DoubleSide
-   } );
-  var trail = new THREE.Mesh( trgeometry, trmaterial );
-  trail.name = "trail";
-  trail.position.set(0.2,0.45,0);
-  trail.rotation.set(-Math.PI/2,0,0)
-  mothership.add(trail);
-//   trail.geometry.verticesNeedUpdate=true;
-// console.log(trail.geometry)
-  // trail.geometry.vertices[1].x+=.01;
-} );
+//   var trmaterial = new THREE.MeshBasicMaterial( {
+//   color:0xff0000, map: texture, transparent: true, opacity: 0.7, side: THREE.DoubleSide
+//    } );
+//   var trail = new THREE.Mesh( trgeometry, trmaterial );
+//   trail.name = "trail";
+//   trail.position.set(0.2,0.45,0);
+//   trail.rotation.set(-Math.PI/2,0,0)
+//   mothership.add(trail);
 
+// } );
+
+// line
+var geometry = new THREE.Geometry();
+geometry.vertices.push(new THREE.Vector3(0.79, 0.45, -0.26));
+geometry.vertices.push(new THREE.Vector3(0.79, 0.45, 0.26));
+var material = new THREE.LineBasicMaterial({ color: 0xffffff });
+
+var line = new THREE.Line(geometry, material);
+line.scale.z = 0.000001;
+mothership.add(line);
 
 
 // sky night
@@ -346,6 +380,9 @@ let updateMouseCoordinates = function(evt) {
   let intersects = raycaster.intersectObject( plane );
   if (intersects.length > 0) { movehero(intersects[ 0 ].point.x, intersects[ 0 ].point.z, intersects[ 0 ].point.y); }
 
+
+
+ 
 };
 
 
@@ -360,7 +397,11 @@ window.addEventListener( 'mousemove', updateMouseCoordinates, false );
 
 
 
-//raycaster
+//raycaster - ship
+let shipray = new THREE.Raycaster();
+
+
+//raycaster - mouse
 let raycaster = new THREE.Raycaster();
 let mouse = new THREE.Vector2();
 let isDragging = false;
@@ -382,30 +423,51 @@ let plane = new THREE.Mesh( plgeometry, plmaterial );
 plane.name = 'plane';
 plane.rotation.set(-Math.PI/2,0,0);
 plane.name = 'plane';
+
 scene.add( plane );
 // plane.visible = false;
 
 // slow down to stop
 function decnum() {
+  document.getElementById('carrier').classList="on";
+  document.getElementById('dirdwn').classList="on";
+  collidableMeshList[0].visible = false;
+  collidableMeshList[1].visible = false;
+      // new TWEEN.Tween( mothership.position ).to( {x: mothership.position.x, y: 0, z: mothership.position.z}, 200 ).start();
+
   var sf = scene.getObjectByProperty( 'name', 'starfield', false );
 
 for ( var i = 0; i < sf.children.length; i ++ ) {
-new TWEEN.Tween( sf.children[i].scale ).to( {x: 1, y: 1, z: 0.01}, 400 ).start();
+new TWEEN.Tween( sf.children[i].scale ).to( {x: 1, y: 1, z: 0.01}, 400 ).onComplete(function() {
+sf.visible = false;
+}).start();
 }//for
 document.getElementById('carrier').value = 0;
 xval = document.getElementById('carrier').value;
 
 
-var ff = scene.getObjectByProperty( 'name', 'trail', false );
-new TWEEN.Tween( ff.scale ).to( {x: 0.1, y: 1, z: 1}, 200 ).start();
-
+// var ff = scene.getObjectByProperty( 'name', 'trail', false );
+// new TWEEN.Tween( ff.scale ).to( {x: 0.1, y: 1, z: 1}, 200 ).start();
+new TWEEN.Tween( line.scale ).to( {x: 1, y: 1, z: 0.000001}, 200 ).start();
 stopwarp = true;
-};
+
+setTimeout(function() {
+  document.getElementById('dirdwn').classList="";
+  document.getElementById('carrier').classList="";
+}, 100);
+
+};// decnum
 
 // accelerate
 function incnum() {
-  var sf = scene.getObjectByProperty( 'name', 'starfield', false );
+  document.getElementById('carrier').classList="on";
+  document.getElementById('dirup').classList="on";
+  collidableMeshList[0].visible = true;
+  collidableMeshList[1].visible = true;
+  // new TWEEN.Tween( mothership.position ).to( {x: mothership.position.x, y: 0.03, z: mothership.position.z}, 200 ).start();
 
+  var sf = scene.getObjectByProperty( 'name', 'starfield', false );
+  sf.visible = true;
   // console.log(scene)
   for ( var i = 0; i < sf.children.length; i ++ ) {
 new TWEEN.Tween( sf.children[i].scale ).to( {x: 1, y: 1, z: 1}, 400 ).start();
@@ -413,11 +475,17 @@ new TWEEN.Tween( sf.children[i].scale ).to( {x: 1, y: 1, z: 1}, 400 ).start();
 document.getElementById('carrier').value = 0.0055;
 xval = document.getElementById('carrier').value;
 
-var ff = scene.getObjectByProperty( 'name', 'trail', false );
-new TWEEN.Tween( ff.scale ).to( {x: 20, y: 1, z: 1}, 200 ).start();
-
+// var ff = scene.getObjectByProperty( 'name', 'trail', false );
+// new TWEEN.Tween( ff.scale ).to( {x: 20, y: 1, z: 1}, 200 ).start();
+new TWEEN.Tween( line.scale ).to( {x: 1, y: 1, z: 1}, 200 ).start();
 stopwarp = false;
-};
+
+setTimeout(function() {
+  document.getElementById('carrier').classList="";
+  document.getElementById('dirup').classList="";
+}, 100);
+
+};//incnum
 
 function jump() {
       console.log(mothership.position.y)
@@ -479,6 +547,7 @@ function Starfield(size, width, height){
   this.stars = [];
   this.obj = new THREE.Group();
   this.obj.name = "starfield";
+  this.obj.visible = false;
   this.obj.rotation.set(0,Math.PI/2,0);
   this.obj.position.set(0,0,0);
   this.size = size;
@@ -511,6 +580,65 @@ if (!stopwarp) {
 
 
 
+// collide objects
+function walls() {
+  var wallGeometry = new THREE.CubeGeometry( 0.3, 0.3, 0.3 );
+
+  var blue = new THREE.MeshLambertMaterial( {color: 0xffffff} );
+  var green = new THREE.MeshLambertMaterial( {color: 0xff0000} );
+
+  var wall = new THREE.Mesh(wallGeometry, blue);
+  wall.position.set(-3, 0.5, -3);
+  wall.name = 'blue';
+  scene.add(wall);
+  collidableMeshList.push(wall);
+
+  
+  var wall2 = new THREE.Mesh(wallGeometry, green);
+  wall2.position.set(3, 0.5, -3);
+  wall2.name = 'green';
+  scene.add(wall2);
+  collidableMeshList.push(wall2);
+
+  collidableMeshList[0].visible = false;
+  collidableMeshList[1].visible = false;
+}
+
+
+// HIT function
+function hit (v) {
+if ( v.length > 0) {
+car.material = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+var num = Math.floor(Math.random()*5) + 1;
+num *= Math.floor(Math.random()*2) == 1 ? 1 : -1;
+var num2 = Math.floor(Math.random()*5) + 1;
+num2 *= Math.floor(Math.random()*2) == 1 ? 1 : -1;
+v[0].object.position.x = num;
+v[0].object.position.z = num2;
+v[0].object.scale.y = 10;
+if (v[0].object.name == 'blue') {bpoints+=1;
+  document.getElementById('chkb').innerHTML=bpoints;
+flash(document.getElementById('chkb'));
+}
+if (v[0].object.name == 'green') {gpoints+=1;
+  flash(document.getElementById('chkg'));
+  document.getElementById('chkg').innerHTML=gpoints;}
+setTimeout(function() {
+car.material = new THREE.MeshPhongMaterial( {color: 0xff0000} );
+v[0].object.scale.y = 1;
+}, 100);
+}//if
+}// fn hit
+
+
+//flash helper f
+function flash(argument) {
+argument.classList = "on";
+setTimeout(function() {
+argument.classList = "";
+}, 100);
+}
+
 
 
 // animate loop
@@ -521,6 +649,7 @@ controls.update();
 TWEEN.update();
 stars.update();
 
+// if (!stopwarp) {
 
 groundtex.offset.x -= xval*3;
 // position lerp
@@ -542,16 +671,52 @@ mothership.rotation.z = -(hero.position.y - mothership.position.y)*0.5;// bank
 groundtex.offset.x =0;
 groundtex.offset.y -= xval*3;
 }
-// mothership.scale.x = 1+xval*30;
-};
 
+
+  for (var vertexIndex = 0; vertexIndex < cubicbody.geometry.vertices.length; vertexIndex++)
+  {   
+    var localVertex = cubicbody.geometry.vertices[vertexIndex].clone();
+    var globalVertex = localVertex.applyMatrix4( cubicbody.matrix );
+    var directionVector = globalVertex.sub( cubicbody.position );
+
+    var vray = new THREE.Raycaster( mothership.position, directionVector.normalize() );
+    var collisionResults = vray.intersectObjects( collidableMeshList );
+    if ( collisionResults.length > 0 && collidableMeshList.distance < directionVector.length() ) 
+      console.log('hit');
+    hit(collisionResults)
+  }
+
+    // set collectables speed/pos
+collidableMeshList[0].position.x += xval*22;
+if (collidableMeshList[0].position.x > 5) {
+    collidableMeshList[0].position.x = -5;
+}
+
+collidableMeshList[1].position.x += xval*12;
+if (collidableMeshList[1].position.x > 5) {
+  collidableMeshList[1].position.x = -5;
+}
+
+
+// car.position.y += ( 0.2 - car.position.y ) * 0.01;
+
+//
+  //blink/flicker
+// if ( Math.random() > 0.9 && !stopwarp) { car.position.y = 
+// (hero.position.y - cursor.position.y)*0.1; } else { 
+// }
+// }//if warp is true
+}; //render loop
+
+    walls();
   setTimeout(function () {
-    /// stars
+// stars
   stars = new Starfield(10, 9, 9);
     var sf = scene.getObjectByProperty( 'name', 'starfield', false );
 for ( var i = 0; i < sf.children.length; i ++ ) { sf.children[i].scale.z = 0.1; }
 
 animate();
+
   }, 200);
 
 		</script>
