--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@ top: 20px; right: 20px;}
 
 <ul class="projects">
 
-<li><a href="projects/drive/">drive <img src="projects/img/drive.jpg" alt="rocket ship on the grid"></a><span>Basic driving game prototype</span></li>
+<li><a href="projects/drive/">drive <img src="projects/img/drive.jpg" alt="vehicle on wireframe track"></a><span>Basic driving game prototype</span></li>
 
-<li><a href="projects/baobab/">baobab <img src="projects/img/baobab.jpg" alt="black tree with white leaves">
+<li><a href="projects/baobab/">baobab <img src="projects/img/baobab.jpg" alt="black tree">
 </a><span>Audio generation with 3D feedback (toggle the switch)</span></li>
 
 <li><a href="projects/tent/">tent <img src="projects/img/tent.jpg" alt="3D rendered tent">
@@ -213,6 +213,11 @@ top: 20px; right: 20px;}
 
 <li><a href="projects/web/">web <img src="projects/img/web.jpg" alt="3D spider on web">
 </a><span>Spider game experiment.</span></li>
+
+<li><a href="projects/hover/">hover <img src="projects/img/flydrive.jpg" alt="hover car">
+</a><span>Fly/drive game experiment.</span></li>
+
+
 </ul>
 
 
